# projeto-recommendation-system

./: README.md  main.py  pyproject.toml
notebooks/: relatorio.ipynb  treinamento.ipynb
results/: best_mf_model.pt  distribuicao_notas.csv  example_user_liked_train.csv  experiment_k.csv  metrics_rating.csv  metrics_top10.csv  mf_k_results.csv  mf_training_history_k_10.csv  mf_training_history_k_100.csv  mf_training_history_k_20.csv  mf_training_history_k_5.csv  mf_training_history_k_50.csv  recommendation_examples.csv  recommendations_mf.csv  recommendations_popularity.csv  recommendations_svd.csv  summary.json  svd_k_results.csv  test_split.csv  train_split.csv
