[project]
name = "projeto-recommendation-system"
version = "0.1.0"
description = "Recommendation system for movies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]
